2007-11-20  Neal H. Walfield  <neal@gnu.org>

	Merge changes from mainline Hurd.  Update L4 bits to compile with
	those changes.

	* sysdeps/l4/pt-block.c (__pthread_block): Call l4_receive, not
	L4_Receive.
	* sysdeps/l4/pt-create-np.c (pthread_create_from_l4_tid_np): Don't
	pass TID to __pthread_create_internal.  Emit a warning.
	* sysdeps/l4/pt-stack-alloc.c (allocate_page): Remove function.
	(__pthread_stack_alloc): Don't require that STACKSIZE is equal to
	__pthread_stacksize.  Call mmap.
	* sysdeps/l4/pt-thread-halt.c (__pthread_thread_halt): Take
	additional argument, need_dealloc.  Call __pthread_dealloc.  Stop
	the thread.
	* sysdeps/l4/hurd/pt-sysdep.c (init_routine): When calling
	__pthread_create_internal, don't pass the tid.
	* tests/test-1.c (main): Use pthread_mutex_init, not
	PTHREAD_MUTEX_INITIALIZER.

	* pthread/pt-alloc.c: Don't include <bits/atomic.h>.  Include
	<atomic.h>.
	(__pthread_free_threads): Make it an atomicptr_t, not an
	__atomicptr_t.
	(__pthread_alloc): Don't use __atomicptr_compare_and_swap, use
	atomic_compare_and_exchange_val_acq.
	* pthread/pt-create.c: Don't include <bits/atomic.h>.  Include
	<atomic.h>.
	(__pthread_total): Make it an atomic_fast32_t, not an __atomic_t.
	(__pthread_create_internal): Use atomic_increment and
	atomic_decrement, not __atomic_inc and __atomic_dec.
	* pthread/pt-dealloc.c: Don't include <bits/atomic.h>.  Include
	<atomic.h>.
	(__pthread_free_threads): Make it an atomicptr_t, not an
	__atomicptr_t.
	(__pthread_dealloc): Use atomic_compare_and_exchange_val_acq, not
	__atomicptr_compare_and_swap.
	* pthread/pt-exit.c: Don't include <bits/atomic.h>.  Include
	<atomic.h>.
	(pthread_exit): Use atomic_decrement_and_test, not
	__atomic_dec_and_test.
	* pthread/pt-internal.h: Don't include <bits/atomic.h>.  Include
	<atomic.h>.
	(__pthread_total): Make it an atomic_fast32_t, not an __atomic_t.
	* sysdeps/powerpc/bits/atomic.h: Remove file.
	* sysdeps/ia32/bits/atomic.h: Likewise.
	