@@ -31,4 +31,6 @@ AC_CONFIG_LINKS([
   include/bits/thread-barrier.h:libpthread/sysdeps/generic/bits/thread-barrier.h
   include/bits/thread-specific.h:libpthread/sysdeps/generic/bits/thread-specific.h
   include/bits/pthread-np.h:libpthread/sysdeps/l4/bits/pthread-np.h
+  include/semaphore.h:libpthread/include/semaphore.h
+  include/bits/semaphore.h:libpthread/sysdeps/generic/bits/semaphore.h
 ])
